[package]
name = "rsdig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["derive"] }
quote = "1.0"
proc-macro2 = "1.0.24"
rand = "0.8.5"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
clap = { version = "4.3.8", features = ["derive"] }
rustls = "0.21.5"
webpki-roots = "0.24"
tokio = { version = "1.29.1", features = ["full"] }
h2 = "0.3"
http = "0.2"
futures = "0.3.*"
tokio-rustls = "0.23.2"

[lib]
proc-macro = true
